重构音效系统，添加主菜单背景图片，优化UI显示